# ars

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: code-quality.yml  publish.yml
ars/: adventure.py  aging.py  certamen.py  character.py  character_context.py  cli.py  combat.py  covenant.py  covenant_economy.py  covenant_integration.py  dice.py  events.py  experience.py  lab_activities.py  laboratory.py  magic_items.py  magic_items_integration.py  seasonal_mechanics.py  seasons.py  serialization.py  spell_mastery.py  spell_research.py  spells.py  state.py  types.py  virtues_flaws.py  vis_aura.py  vis_aura_integration.py  vis_management.py  wizard.py
ars/cli/: adventure_commands.py  character_commands.py  character_wizard.py  cli.py  combat_commands.py  combat_wizard.py  covenant_commands.py  economy_commands.py  lab_commands.py  magic_item_commands.py  state.py  (+4 more)
docs/: README.md  ROADMAP.md  character.md  combat.md  covenant.md  getting_started.md  laboratory.md  seasons.md  spellcasting.md
tests/: conftest.py  test_adventure.py  test_aging_warping.py  test_character.py  test_combat.py  test_combat_spellcasting_integration.py  test_covenant.py  test_covenant_economy.py  test_covenant_integration.py  test_dice.py  test_e2e_gameplay.py  test_events.py  test_lab_activities.py  test_lab_display.py  test_laboratory.py  test_magic_items.py  test_research_integration.py  test_seasonal_mechanics.py  test_seasons.py  test_spell_research.py  test_spellcasting.py  test_spells.py  test_vis_aura.py  test_vis_aura_integration.py  test_vis_management.py
(+23 files in other folders)
